Remove *.properties from config-server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8888
-spring.cloud.config.server.git.uri=file:./src/main/resources/myConfig
+spring.cloud.config.name=config-server
+spring.cloud.config.server.git.uri=https://github.com/Abderraouf1990/config-properties.git
+spring.cloud.config.server.git.default-label=develop
+logging.level.root=INFO
